--- a/package.json
+++ b/package.json
@@ -9,22 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~48.0.15",
-    "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
-    "react-native": "0.71.8",
-    "react-native-web": "~0.18.10",
-    "react-dom": "18.2.0",
     "@expo/webpack-config": "^18.0.1",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
+    "expo": "~48.0.15",
     "expo-sqlite": "~11.1.1",
+    "expo-status-bar": "~1.4.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-image-picker": "^5.4.0",
+    "react-native-permissions": "^3.8.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-vector-icons": "^8.0.0"
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
